# rowpic

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes_classify.py  routes_color.py  routes_fs.py  routes_info.py  routes_photos.py  routes_tools.py
backend/app/core/: config.py  logging.py
backend/app/services/: classifier_service.py  color_service.py  decoder.py  exif_service.py  focus_service.py  histogram_service.py  phash_service.py  scanner.py
desktop/: make_icons.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  fs.ts  history.ts  types.ts
frontend/src/components/: ColorPanel.tsx  CompositionOverlay.tsx  ExifPanel.tsx  FocusPanel.tsx  FolderTree.tsx  HistogramPanel.tsx  HistoryList.tsx  PathPicker.tsx  RightPanel.tsx  Sidebar.tsx  Stage.tsx  StatusBar.tsx  TopBar.tsx
frontend/src/i18n/: index.ts
frontend/src/styles/: global.css
scripts/: _make_sample.py  e2e_test.py  make_synthetic_raw.py  start_desktop.bat  start_desktop.py  start_server.bat  start_server.py  start_web.bat  start_web.py  start_web.sh
