[package]
name = "rowpic"
version = "0.1.0"
description = "Photo viewer & analyzer"
authors = ["rowpic"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "rowpic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
